--- a/timer-controls/index.html
+++ b/timer-controls/index.html
@@ -1,5 +1,9 @@
 <!doctype html>
 
+<head>
+  <link rel="import" src="vendor/font-roboto" />
+</head>
+
 <body>
   <script src="bundle.js"></script>
   <script>Elm.Main.fullscreen()</script>
