Apply roboto font

--- a/timer-controls/index.html
+++ b/timer-controls/index.html
@@ -1,7 +1,13 @@
 <!doctype html>
 
 <head>
-  <link rel="import" src="vendor/font-roboto" />
+  <link rel="import" href="vendor/font-roboto/roboto.html" />
+  <style>
+    html {
+      font-family: roboto, sans-serif;
+      font-weight: 300;
+    }
+  </style>
 </head>
 
 <body>
