--- a/timer-controls/public/index.html
+++ b/timer-controls/public/index.html
@@ -2,10 +2,12 @@
 
 <head>
   <link rel="import" href="vendor/font-roboto/roboto.html" />
+  <link rel="import" href="vendor/paper-swatch-picker/paper-swatch-picker.html" />
   <style>
-    html {
-      font-family: roboto, sans-serif;
-      font-weight: 300;
+    *, *::before, *::after {
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
     }
   </style>
   <link rel="stylesheet" href="style.css" />
