Make appish on iOS

--- a/timer-controls/public/index.html
+++ b/timer-controls/public/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 
 <head>
+  <title>present.now.sh</title>
+
   <link rel="import" href="vendor/font-roboto/roboto.html" />
   <link rel="import" href="vendor/paper-swatch-picker/paper-swatch-picker.html" />
   <style>
@@ -11,6 +13,10 @@
     }
   </style>
   <link rel="stylesheet" href="style.css" />
+
+  <meta name="viewport" content="initial-scale=1, user-scalable=no" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 </head>
 
 <body>
