Set up browserify build

--- a/timer-controls/preview/index.html
+++ b/timer-controls/preview/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <script src="bundle.js"></script>
+  <script src="elm.js"></script>
   <script>Elm.Main.fullscreen()</script>
   <script>!function(){if("registerElement"in document&&"import"in document.createElement("link")&&"content"in document.createElement("template"));else{for(var e,n=document.querySelectorAll("link[rel=prefetch]"),r=0;r<n.length;r++)e=new XMLHttpRequest,e.open("GET",n[r].href),e.send();var t=document.createElement("script");t.src="vendor/webcomponentsjs/webcomponents-lite.min.js",document.body.appendChild(t)}}();</script>
 </body>
