--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,6 @@
 <head>
   <title>present.now.sh</title>
 
-  <link rel="import" href="/vendor/font-roboto/roboto.html" />
-  <link rel="import" href="/vendor/paper-swatch-picker/paper-swatch-picker.html" />
   <style>
     *, *::before, *::after {
       padding: 0;
@@ -12,15 +10,30 @@
       box-sizing: border-box;
     }
   </style>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="shell.css" />
+  <link rel="import" href="/vendor/font-roboto/roboto.html" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:900" />
 
   <meta name="viewport" content="initial-scale=1, user-scalable=no" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+  <link rel="import" href="components/timer-controls/timer-controls.html" />
 </head>
 
 <body>
-  <script src="elm.js"></script>
-  <script>Elm.Main.fullscreen()</script>
+  <div class="control-panel">
+    <h1>present<span class="thin">.now.sh</span></h1>
+
+    <h2>here’s how it goes</h2>
+    <p>
+      set color breakpoints in your presentation.<br/>
+      tap <strong>READY TO ROLL</strong>.<br/>
+      never run overtime again.
+    </p>
+
+    <timer-controls />
+  </div>
+
   <script>!function(){if("registerElement"in document&&"import"in document.createElement("link")&&"content"in document.createElement("template"));else{for(var e,n=document.querySelectorAll("link[rel=prefetch]"),r=0;r<n.length;r++)e=new XMLHttpRequest,e.open("GET",n[r].href),e.send();var t=document.createElement("script");t.src="vendor/webcomponentsjs/webcomponents-lite.min.js",document.body.appendChild(t)}}();</script>
 </body>
