--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 
 <body>
   <div class="control-panel">
-    <h1>present<span class="thin">.now.sh</span></h1>
+    <h1>present<wbr /><span class="thin">.now.sh</span></h1>
 
     <h2>here’s how it goes</h2>
     <p>
