--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     }
   </style>
   <link rel="stylesheet" href="shell.css" />
+  <script src="shell.js"></script>
   <link rel="import" href="/vendor/font-roboto/roboto.html" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:900" />
 
