--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,9 @@
 
     <h2>here’s how it goes</h2>
     <p>
-      set color breakpoints in your presentation.<br/>
-      tap <strong>READY TO ROLL</strong>.<br/>
+      time your talk.<br />
+      set color breakpoints to know where you are.<br />
+      tap <strong>READY TO ROLL</strong>.<br />
       never run overtime again.
     </p>
 
