--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,13 @@
     </p>
 
     <timer-controls />
+    <script>(function() {
+      var timerControls = document.querySelector('timer-controls');
+      timerControls.setAttribute('initial-color', presentNowSh.headerColor);
+      timerControls.addEventListener('initial-color', function(event) {
+        presentNowSh.setHeaderColor(event.detail.color);
+      });
+    }());</script>
   </div>
 
   <script>!function(){if("registerElement"in document&&"import"in document.createElement("link")&&"content"in document.createElement("template"));else{for(var e,n=document.querySelectorAll("link[rel=prefetch]"),r=0;r<n.length;r++)e=new XMLHttpRequest,e.open("GET",n[r].href),e.send();var t=document.createElement("script");t.src="vendor/webcomponentsjs/webcomponents-lite.min.js",document.body.appendChild(t)}}();</script>
