Add “ready to roll” button

--- a/timer-controls/preview/index.html
+++ b/timer-controls/preview/index.html
@@ -6,6 +6,8 @@
   <link rel="import" href="/style-guide/style-guide.html" />
 
   <link rel="import" href="/vendor/paper-swatch-picker/paper-swatch-picker.html" />
+  <link rel="import" href="/vendor/paper-button/paper-button.html" />
+  <link rel="import" href="/vendor/iron-icons/av-icons.html" />
   <link rel="stylesheet" href="style.css" />
 
   <meta name="viewport" content="initial-scale=1, user-scalable=no" />
