Improve network performance

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
-  <link rel="import" href="style-guide/style-guide.html" />
+  <link rel="import" async href="style-guide/style-guide.html" />
   <link rel="stylesheet" href="shell.css" />
 
-  <link rel="import" href="components/timer-controls/timer-controls.html" />
+  <link rel="import" async href="components/timer-controls/timer-controls.html" />
   <link rel="import" async href="components/timer-display/timer-display.html" />
 </head>
 
