Fix iOS landscape mode

--- a/style-guide/style-guide.html
+++ b/style-guide/style-guide.html
@@ -12,6 +12,7 @@
       font-family: roboto, sans-serif;
       line-height: 1.5;
       color: rgba(0, 0, 0, 0.87);
+      -webkit-text-size-adjust: 100%;  /* http://stackoverflow.com/a/2711132/2816199 */
     }
 
     h1 {
