--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,14 @@
       never run overtime again.
     </p>
 
-    <timer-controls></timer-controls>
+    <timer-controls>
+      <h2 class="skeleton" style="width: 30vw"></h2>
+      <p class="skeleton" style="width: 80vw"></p>
+      <p class="skeleton" style="width: 70vw"></p>
+      <div style="direction: rtl">
+        <h2 class="skeleton" style="width: 20vw"></h2>
+      </div>
+    </timer-controls>
   </div>
 
   <timer-display paused></timer-display>
