Mount timer-controls as custom element

--- a/timer-controls/preview/index.html
+++ b/timer-controls/preview/index.html
@@ -22,8 +22,6 @@
 </head>
 
 <body>
-  <script src="elm.js"></script>
-  <script>
-    Elm.Main.fullscreen({initialColor: '#8BC34A'});
-  </script>
+  <script src="bundle.js"></script>
+  <timer-controls initial-color="#8BC34A" />
 </body>
