Move inline-input to its own place

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
 
   <link async rel="import" href="components/timer-controls/timer-controls.html" />
   <link async rel="import" href="components/timer-display/timer-display.html" />
+  <link async rel="import" href="components/inline-input/inline-input.html" />
 </head>
 
 <body>
