--- a/timer-controls/preview/index.html
+++ b/timer-controls/preview/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
 
 <head>
-  <title>present.now.sh</title>
+  <title>timer-controls</title>
 
   <link rel="import" href="/style-guide/style-guide.html" />
 
   <link rel="import" href="/vendor/paper-swatch-picker/paper-swatch-picker.html" />
   <link rel="import" href="/vendor/paper-button/paper-button.html" />
   <link rel="import" href="/vendor/iron-icons/av-icons.html" />
+  <link rel="import" href="/inline-input/inline-input.html" />
   <link rel="stylesheet" href="style.css" />
 
   <meta name="viewport" content="initial-scale=1, user-scalable=no" />
